crates/ic-ptree/defs/cidl/ptree_builder.h

struct ptree* append_node(struct ptree* list, struct ptree* node);
struct declarator* append_decl(struct declarator* list, struct declarator* decl);
struct declarator* create_decl(struct identifier ident, struct ptree* annotations);
void push_context(struct ptree* p);
int register_node(struct ptree* p);
int register_node_dcl(struct ptree* p);
struct ptree* lookup_node(struct identifier ident);
struct ptree* lookup_type(struct identifier ident);
struct ptree* pop_context(void);
struct ptree* duplicate_node(const struct ptree* node);
struct ptree* duplicate_tree(const struct ptree* node);
void create_include_start(struct identifier ident);
struct ptree* create_array_type(struct declarator* declarator, struct ptree* type);
struct ptree* create_include_finish(struct ptree* members);
void create_module_start(struct identifier ident);
struct ptree* create_module_finish(struct ptree* members, struct position pos_end);
const struct numeric* lookup_value(struct identifier ident);
const struct numeric* create_value_node(const struct numeric* value, struct ptree* members);
struct ptree*
create_const_node(struct declarator* decl, struct ptree* type, const struct numeric* value);
struct ptree* create_sequence(struct ptree* element_type, const struct numeric* bound);
struct ptree* create_string(const struct numeric* bound);
struct ptree* create_wstring(const struct numeric* bound);
struct numeric* new_numeric(enum numeric_kind kind);
const struct numeric* create_bool(int value);
const struct numeric* create_char(char value);
const struct numeric* create_i64(int64_t value, int base);
const struct numeric* create_u64(uint64_t value, int base);
const struct numeric* create_str(const char* value);
const struct numeric* create_float(float value);
const struct numeric* create_double(double value);
struct ptree* create_struct_start(struct identifier ident, struct ptree* parent);
struct ptree* create_struct_finish(struct ptree* members, struct position pos_end);
struct ptree* create_struct_dcl(struct identifier ident);
struct ptree* create_union_start(struct identifier ident);
struct ptree*
create_union_finish(struct ptree* discriminator, struct ptree* members, struct position pos_end);
struct ptree* create_union_dcl(struct identifier ident);
struct ptree*
create_member(struct declarator* declarators, struct ptree* type, struct ptree* annotations);
struct ptree*
create_union_member(struct ptree* value, struct ptree* cases, struct ptree* annotations);
struct ptree* create_case_label(const struct numeric* value);
struct ptree* create_default_case(void);
struct ptree* create_null_node(void);
struct ptree* create_enum(struct identifier ident, struct ptree* values, struct position pos_end);
struct ptree* create_enum_value(struct identifier ident, const struct numeric* value);
struct ptree* create_type(struct declarator* declarators, struct ptree* type);
struct ptree* create_native_type(struct identifier ident);
void create_exception_start(struct identifier ident);
struct ptree* create_exception_finish(struct ptree* members, struct position pos_end);
struct ptree* create_interface_dcl(struct identifier ident, int is_local);
void create_interface_start(struct identifier ident, struct declarator* parents, int is_local);
struct ptree* create_interface_finish(struct ptree* members, struct position pos_end);
struct ptree* annotate(struct ptree* node, struct ptree* annotations);
struct ptree* annotate_alias(struct ptree* node, struct ptree* annotations);
struct ptree* annotate_list(struct ptree* node, struct ptree* annotations);
struct ptree* annotate_last(struct ptree* node, struct ptree* annotations);
struct ptree* create_interface_op(
    struct identifier ident,
    struct ptree* params,
    struct ptree* retval,
    struct declarator* raises
);
struct ptree* create_param_dcl(struct declarator* decl, struct ptree* type, int kind);
struct ptree* create_attribute(
    struct declarator* decl,
    struct ptree* type,
    struct declarator* getraises,
    struct declarator* setraises,
    int readonly
);
struct ptree*
create_map(struct ptree* key_type, struct ptree* element_type, const struct numeric* bound);
struct ptree* create_bitset(
    struct identifier ident,
    struct ptree* fields,
    struct ptree* type,
    struct position pos_end
);
struct ptree*
create_bitfield(struct declarator* declarators, const struct numeric* bits, struct ptree* type);
struct ptree*
create_bitmask(struct identifier ident, struct ptree* values, struct position pos_end);
struct ptree* create_bitmask_value(struct identifier ident, const struct numeric* value);
void create_annotation_dcl_start(struct identifier ident);
struct ptree* create_annotation_dcl_finish(struct ptree* members, struct position pos_end);
struct ptree* create_annotation_member(
    struct declarator* decl,
    struct ptree* type,
    const struct numeric* default_value
);
void create_annotation_start(struct identifier ident);
struct ptree* create_annotation_finish(struct ptree* params);
struct ptree* create_annotation_param(struct identifier ident, const struct numeric* value);