crates/ic-ptree/defs/cidl/constants.h

enum numeric_kind {
    UNDEF_KIND,
    BOOLEAN_KIND,
    INT8_KIND,
    OCTET_KIND,
    SHORT_KIND,
    USHORT_KIND,
    LONG_KIND,
    ULONG_KIND,
    LONGLONG_KIND,
    ULONGLONG_KIND,
    FLOAT_KIND,
    DOUBLE_KIND,
    CHAR_KIND,
    STRING_KIND,
    PTREE_KIND
};
struct numeric;
enum ptree_opts {
    OPT_DECLARATION = (1 << 0),
    OPT_IN = (1 << 1),
    OPT_OUT = (1 << 2),
    OPT_INOUT = (OPT_IN | OPT_OUT),
    OPT_READONLY = (1 << 3),
    OPT_PRIVATE = (1 << 4),
    OPT_DEFAULT = (1 << 5),  
    OPT_HAS_CHILDREN = (1 << 6),
    OPT_ENUMERATED = (1 << 7),
    OPT_EMIT_CODE = (1 << 8),
    OPT_SYSTEM_INCLUDE = (1 << 9),
    OPT_CIRCULAR = (1 << 10),
    OPT_SEQUENCE_LENGTH = (1 << 11),
    OPT_CONST_VALUE = (1 << 12),      
    OPT_ANONYMOUS_ALIAS = (1 << 13),  
    OPT_RUST_TRIVIAL = (1 << 14),      
    OPT_RUST_TOTAL_ORDER = (1 << 15),  
    OPT_LOCAL = (1 << 16),
    OPT_BUILTIN = (1 << 17),  
};
struct ptree;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_listener;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_length_bit_bound;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_value_offset;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_length_value_offset;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_repeat_count;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_vmf_xri;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_vmf_decimal;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_string_constants;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_jaus_presence_vector;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_jaus_integer;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_jaus_integer_function;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_protobuf_type;
INTERCOM_PUBLIC extern struct ptree* annotation_type_jaus;