crates/ic-ptree/cpp/defs/cidl/ptree.h


struct ptree {
    ptree() {
        value = num_undef;
    }
    struct iterator {
        using iterator_category = std::forward_iterator_tag;
        using difference_type = std::ptrdiff_t;
        using value_type = ptree*;
        using pointer = value_type*;
        using reference = value_type&;
        explicit iterator(value_type node) : m_node(node) {}
        iterator(const iterator&) = default;
        iterator& operator=(const iterator&) = default;
        iterator& operator++() {
            m_node = m_node->next;
            return *this;
        }
        iterator operator++(int) {
            iterator prev = *this;
            ++(*this);
            return prev;
        }
        bool operator==(const iterator& other) const {
            return m_node == other.m_node;
        }
        bool operator!=(const iterator& other) const {
            return m_node != other.m_node;
        }
        value_type operator*() const {
            return m_node;
        }
      private:
        value_type m_node;
    };
    struct const_iterator {
        using iterator_category = std::forward_iterator_tag;
        using difference_type = std::ptrdiff_t;
        using value_type = const ptree*;
        using pointer = value_type*;
        using reference = value_type&;
        explicit const_iterator(value_type node) : m_node(node) {}
        const_iterator(const const_iterator&) = default;
        const_iterator& operator=(const const_iterator&) = default;
        const_iterator& operator++() {
            m_node = m_node->next;
            return *this;
        }
        const_iterator operator++(int) {
            const_iterator prev = *this;
            ++(*this);
            return prev;
        }
        bool operator==(const const_iterator& other) const {
            return m_node == other.m_node;
        }
        bool operator!=(const const_iterator& other) const {
            return m_node != other.m_node;
        }
        value_type operator*() const {
            return m_node;
        }
      private:
        value_type m_node;
    };
    node_kind kind{N_UNDEF};
    std::string name;
    ptree* next{nullptr};
    ptree* super{nullptr};
    ptree* scope{nullptr};
    ptree* type{nullptr};
    ptree* element_type{nullptr};
    ptree* key_type{nullptr};
    ptree* discriminator{nullptr};
    ptree* members{nullptr};
    ptree* annotations{nullptr};
    ptree* generated{nullptr};
    const ptree* original{nullptr};
    std::vector<ptree*> parents;
    std::vector<ptree*> getraises;
    std::vector<ptree*> setraises;
    ptree* included_from{nullptr};
    std::vector<numeric> bounds;
    unsigned int flags{0};
    std::string file_name;
    numeric value;
};
struct declarator {
    std::string ident;
    std::vector<numeric> bounds;
    ptree* annotations = nullptr;
    declarator* next = nullptr;
};
template <typename T>
T value(const numeric& v) {
    return value_impl<T>(v);
}
template <>
inline uint8_t value(const numeric& v) {
    switch (v.kind()) {
    case FLOAT_KIND:
        return static_cast<uint8_t>(static_cast<int8_t>(v.val.f()));
    case DOUBLE_KIND:
        return static_cast<uint8_t>(static_cast<int8_t>(v.val.d()));
    default:
        return value_impl<uint8_t>(v);
    }
}
template <>
inline uint16_t value(const numeric& v) {
    switch (v.kind()) {
    case FLOAT_KIND:
        return static_cast<uint16_t>(static_cast<int16_t>(v.val.f()));
    case DOUBLE_KIND:
        return static_cast<uint16_t>(static_cast<int16_t>(v.val.d()));
    default:
        return value_impl<uint16_t>(v);
    }
}
template <>
inline uint32_t value(const numeric& v) {
    switch (v.kind()) {
    case FLOAT_KIND:
        return static_cast<uint32_t>(static_cast<int32_t>(v.val.f()));
    case DOUBLE_KIND:
        return static_cast<uint32_t>(static_cast<int32_t>(v.val.d()));
    default:
        return value_impl<uint32_t>(v);
    }
}
template <>
inline uint64_t value(const numeric& v) {
    switch (v.kind()) {
    case FLOAT_KIND:
        return static_cast<uint64_t>(static_cast<int64_t>(v.val.f()));
    case DOUBLE_KIND:
        return static_cast<uint64_t>(static_cast<int64_t>(v.val.d()));
    default:
        return value_impl<uint64_t>(v);
    }
}
template <>
inline bool value(const numeric& v) {
    switch (v.kind()) {
    case UNDEF_KIND:
        return false;
    case BOOLEAN_KIND:
        return v.val.b() != 0;
    case INT8_KIND:
        return v.val.i8() != 0;
    case OCTET_KIND:
        return v.val.o() != 0;
    case SHORT_KIND:
        return v.val.s() != 0;
    case USHORT_KIND:
        return v.val.us() != 0;
    case LONG_KIND:
        return v.val.l() != 0;
    case ULONG_KIND:
        return v.val.ul() != 0;
    case LONGLONG_KIND:
        return v.val.ll() != 0;
    case ULONGLONG_KIND:
        return v.val.ull() != 0;
    case FLOAT_KIND:
        return v.val.f() != 0;
    case DOUBLE_KIND:
        return v.val.d() != 0;
    case CHAR_KIND:
        return v.val.c() != 0;
    case STRING_KIND:
        return !v.val.str().empty();
    case PTREE_KIND:
        return v.val.node() != nullptr;
    }
    return false;
}
template <>
inline std::string value(const numeric& v) {
    std::stringstream out;
    if (v.base == 16) {
        switch (v.kind()) {
        case OCTET_KIND:
        case USHORT_KIND:
        case ULONG_KIND:
        case ULONGLONG_KIND:
            out << std::nouppercase << std::hex << std::setfill('0') << "0x";
            break;
        case INT8_KIND:
        case SHORT_KIND:
        case LONG_KIND:
        case LONGLONG_KIND:
            if (value<int64_t>(v) >= 0) {
                out << std::nouppercase << std::hex << std::setfill('0') << "0x";
            }
            break;
        default:
            break;
        }
    }
    switch (v.kind()) {
    case UNDEF_KIND:
        break;
    case BOOLEAN_KIND:
        out << (v.val.b() ? "true" : "false");
        break;
    case INT8_KIND:
        out << static_cast<short>(v.val.i8());
        break;
    case OCTET_KIND:
        out << static_cast<short>(v.val.o());
        break;
    case SHORT_KIND:
        out << v.val.s();
        break;
    case USHORT_KIND:
        out << v.val.us();
        break;
    case LONG_KIND:
        out << v.val.l();
        break;
    case ULONG_KIND:
        out << v.val.ul();
        break;
    case LONGLONG_KIND:
        out << v.val.ll();
        break;
    case ULONGLONG_KIND:
        out << v.val.ull();
        break;
    case FLOAT_KIND:
        out << v.val.f();
        break;
    case DOUBLE_KIND:
        out << v.val.d();
        break;
    case CHAR_KIND:
        out.put(static_cast<char>(v.val.c()));
        break;
    case STRING_KIND:
        out << v.val.str();
        break;
    case PTREE_KIND:
        return intercom::cidl::string_value(v.val.node()->value);
    }
    return out.str();
}