crates/ic-ptree/src/sys.rs

unsafe extern "C" {
    pub static mut annotation_type_ext_listener: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_length_bit_bound: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_value_offset: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_length_value_offset: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_repeat_count: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_vmf_xri: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_vmf_decimal: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_string_constants: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_jaus_presence_vector: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_jaus_integer: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_jaus_integer_function: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_protobuf_type: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_jaus: *mut ptree;
}
unsafe extern "C" {
    pub fn set_node_flags(p: *mut ptree, flags: ptree_opts);
}
unsafe extern "C" {
    pub fn append_node(list: *mut ptree, node: *mut ptree) -> *mut ptree;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct declarator {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn append_decl(list: *mut declarator, decl: *mut declarator) -> *mut declarator;
}
unsafe extern "C" {
    pub fn create_decl(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        annotations: *mut ptree,
    ) -> *mut declarator;
}
unsafe extern "C" {
    pub fn push_context(arg1: *mut parser_state, p: *mut ptree);
}
unsafe extern "C" {
    pub fn register_node(arg1: *mut parser_state, p: *mut ptree) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn register_node_dcl(arg1: *mut parser_state, p: *mut ptree) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lookup_node(arg1: *mut parser_state, ident: *const ::std::os::raw::c_char)
    -> *mut ptree;
}
unsafe extern "C" {
    pub fn lookup_type(arg1: *mut parser_state, ident: *const ::std::os::raw::c_char)
    -> *mut ptree;
}
unsafe extern "C" {
    pub fn pop_context(arg1: *mut parser_state) -> *mut ptree;
}
unsafe extern "C" {
    pub fn duplicate_node(arg1: *mut parser_state, node: *const ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn duplicate_tree(arg1: *mut parser_state, node: *const ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_include_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        is_system_inc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn create_array_type(
        arg1: *mut parser_state,
        declarator: *mut declarator,
        type_: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_include_finish(arg1: *mut parser_state, members: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_module_start(arg1: *mut parser_state, ident: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn create_module_finish(arg1: *mut parser_state, members: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn lookup_value(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_value_node(
        arg1: *mut parser_state,
        value: *const numeric,
        members: *mut ptree,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_const_node(
        arg1: *mut parser_state,
        decl: *mut declarator,
        type_: *mut ptree,
        value: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_sequence(
        arg1: *mut parser_state,
        element_type: *mut ptree,
        bound: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_string(arg1: *mut parser_state, bound: *const numeric) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_wstring(arg1: *mut parser_state, bound: *const numeric) -> *mut ptree;
}
unsafe extern "C" {
    pub fn new_numeric(arg1: *mut parser_state, kind: numeric_kind) -> *mut numeric;
}
unsafe extern "C" {
    pub fn create_bool(arg1: *mut parser_state, value: ::std::os::raw::c_int) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_char(arg1: *mut parser_state, value: ::std::os::raw::c_char) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_i64(
        arg1: *mut parser_state,
        value: i64,
        base: ::std::os::raw::c_int,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_u64(
        arg1: *mut parser_state,
        value: u64,
        base: ::std::os::raw::c_int,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_str(
        arg1: *mut parser_state,
        value: *const ::std::os::raw::c_char,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_float(arg1: *mut parser_state, value: f32) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_double(arg1: *mut parser_state, value: f64) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_numeric_node(arg1: *mut parser_state, node: *mut ptree) -> *const numeric;
}
unsafe extern "C" {
    pub fn create_struct_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        parent: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_struct_finish(arg1: *mut parser_state, members: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_struct_dcl(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_union_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_union_discriminator(
        arg1: *mut parser_state,
        type_: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_union_finish(
        arg1: *mut parser_state,
        discriminator: *mut ptree,
        members: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_union_dcl(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_member(
        arg1: *mut parser_state,
        declarators: *mut declarator,
        type_: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_union_member(
        arg1: *mut parser_state,
        value: *mut ptree,
        cases: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_case_label(arg1: *mut parser_state, value: *const numeric) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_default_case(arg1: *mut parser_state) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_null_node(arg1: *mut parser_state) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_enum(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        type_: *mut ptree,
        values: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_enum_value(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        value: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_type(
        arg1: *mut parser_state,
        declarators: *mut declarator,
        type_: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_native_type(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_exception_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_exception_finish(arg1: *mut parser_state, members: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_interface_dcl(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        is_local: ::std::os::raw::c_int,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_interface_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        parents: *mut declarator,
        is_local: ::std::os::raw::c_int,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_interface_finish(arg1: *mut parser_state, members: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn annotate(
        arg1: *mut parser_state,
        node: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn annotate_alias(
        arg1: *mut parser_state,
        node: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn annotate_list(
        arg1: *mut parser_state,
        node: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn annotate_last(
        arg1: *mut parser_state,
        node: *mut ptree,
        annotations: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_interface_op(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        params: *mut ptree,
        retval: *mut ptree,
        raises: *mut declarator,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_param_dcl(
        arg1: *mut parser_state,
        decl: *mut declarator,
        type_: *mut ptree,
        kind: ::std::os::raw::c_int,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_attribute(
        arg1: *mut parser_state,
        decl: *mut declarator,
        type_: *mut ptree,
        getraises: *mut declarator,
        setraises: *mut declarator,
        readonly: ::std::os::raw::c_int,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_map(
        arg1: *mut parser_state,
        key_type: *mut ptree,
        element_type: *mut ptree,
        bound: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_bitset(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        fields: *mut ptree,
        parent: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_bitfield(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        bits: *const numeric,
        type_: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_bitmask(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        type_: *mut ptree,
        values: *mut ptree,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_bitmask_value(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        value: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_annotation_dcl_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn create_annotation_dcl_finish(arg1: *mut parser_state, members: *mut ptree)
    -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_annotation_member(
        arg1: *mut parser_state,
        decl: *mut declarator,
        type_: *mut ptree,
        default_value: *const numeric,
    ) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_annotation_start(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        annotation_def: *mut ptree,
    );
}
unsafe extern "C" {
    pub fn create_annotation_finish(arg1: *mut parser_state, params: *mut ptree) -> *mut ptree;
}
unsafe extern "C" {
    pub fn create_annotation_param(
        arg1: *mut parser_state,
        ident: *const ::std::os::raw::c_char,
        value: *const numeric,
    ) -> *mut ptree;
}
